[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainHudScene.gd" type="Script" id=1]

[node name="MainHUDScene" type="Node"]
script = ExtResource( 1 )

[node name="MainHUD" type="CanvasLayer" parent="."]

[node name="UpperBar" type="ColorRect" parent="MainHUD"]
margin_right = 1440.0
margin_bottom = 64.0
color = Color( 0.603922, 0.592157, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerBar" type="ColorRect" parent="MainHUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
color = Color( 0.603922, 0.592157, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBar" type="ColorRect" parent="MainHUD"]
anchor_bottom = 1.0
margin_right = 32.0
color = Color( 0.603922, 0.592157, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightUnderBar" type="ColorRect" parent="MainHUD"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -272.0
color = Color( 0.603922, 0.592157, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightBar" type="ColorRect" parent="MainHUD"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
color = Color( 0.215686, 0.207843, 0.227451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
